encoding/jsonschema/testdata/txtar/newid_oldversion.txtar
#strict
-- schema.json --
{
  "$schema": "http://json-schema.org/draft-04/schema#",
  "$id": "http://example.test",
  "type": "string"
}
-- out/decode/extract --
ERROR:
keyword "$id" is not supported in JSON schema version http://json-schema.org/draft-04/schema#:
    schema.json:3:3
